--- a/Home/rooms.html
+++ b/Home/rooms.html
@@ -9,8 +9,8 @@
    <link rel="stylesheet" href="fonts/ionicons/css/ionicons.min.css">
   <link rel="stylesheet" href="fonts/fontawesome/css/font-awesome.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Antic+Didone&family=Crete+Round:ital@1&family=Libre+Baskerville:wght@700&family=Lora:ital@1&family=Merriweather:ital@1&family=Prata&family=Quicksand:wght@500&family=Raleway:wght@600&family=Ranga&family=Tsukimi+Rounded:wght@500&display=swap&family=Playfair+Display:400,700,900|Rubik:300,400,700" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Antic+Didone&family=Crete+Round:ital@1&family=Libre+Baskerville:wght@700&family=Lora:ital@1&family=Merriweather:ital@1&family=Prata&family=Quicksand:wght@500&family=Raleway:wght@600&family=Ranga&family=Tsukimi+Rounded:wght@500&display=swap" rel="stylesheet">
  </head>
  <body>
   <div class="top-footer">
@@ -42,7 +42,7 @@
       </div>
       <div class="room1-text">
         <h2>Classic Chamber</h2>
-        <h2>Step into the Classic Chamber, where simplicity meets comfort. This cozy retreat provides a serene ambiance for your stay. The room features a plush queen-sized bed with soft, high-quality linens to ensure a peaceful night's sleep. Adorned with tasteful decor and warm lighting, the Classic Chamber offers a calming atmosphere to unwind after a long day.</h2>
+        <b><h2>Step into the Classic Chamber, where simplicity meets comfort. This cozy retreat provides a serene ambiance for your stay. The room features a plush queen-sized bed with soft, high-quality linens to ensure a peaceful night's sleep. Adorned with tasteful decor and warm lighting, the Classic Chamber offers a calming atmosphere to unwind after a long day.</h2></b>
         <a href="../Home/booking.html" class="booknowbuttondes">BOOK NOW</a>
       </div>
   
