--- a/Home/contact.html
+++ b/Home/contact.html
@@ -6,11 +6,9 @@
    <title>Continental_SignUp</title>
    <link rel="stylesheet" href="css/bootstrap.css">
    <link rel="stylesheet" type="text/css" href="contact.css">
-   <link rel="stylesheet" href="fonts/ionicons/css/ionicons.min.css">
-    <link rel="stylesheet" href="fonts/fontawesome/css/font-awesome.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Antic+Didone&family=Crete+Round:ital@1&family=Libre+Baskerville:wght@700&family=Lora:ital@1&family=Merriweather:ital@1&family=Prata&family=Quicksand:wght@500&family=Raleway:wght@600&family=Ranga&family=Tsukimi+Rounded:wght@500&display=swap&family=Playfair+Display:400,700,900|Rubik:300,400,700" rel="stylesheet">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Antic+Didone&family=Crete+Round:ital@1&family=Libre+Baskerville:wght@700&family=Lora:ital@1&family=Merriweather:ital@1&family=Prata&family=Quicksand:wght@500&family=Raleway:wght@600&family=Ranga&family=Tsukimi+Rounded:wght@500&display=swap" rel="stylesheet">
  </head>
  <body>
   <div class="top-footer">
@@ -29,6 +27,7 @@
         <li><a href="dining.html">DINING</a></li>
         <li><a href="amenities.html">AMENITIES</a></li>
         <li><a href="member.html">MEMBERS</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
       </ul>
       <div class="book-now-button">
         <a href="booking.html">BOOK NOW</a>
