minor changes to operating hours

--- a/Home/contact.html
+++ b/Home/contact.html
@@ -42,9 +42,10 @@
      <br>
      <h2>Operating Hours</h2>
      <br>
-     <ul>Sunday - Thursday, 11am - 10pm</ul>
+     <ul>Sunday - Thursday: 11am - 10pm</ul>
      <br>
-     <ul> Friday, Saturday and Eve of Public Holiday, 11am - 11pm</ul>
+     <ul> Friday, Saturday and Eve of Public Holiday:</ul>
+      <ul> 11am - 11pm</ul>
      <br>
     <img src="https://burst.shopifycdn.com/photos/a-phone-on-a-blue-background-with-contact-us.jpg?width=1200&format=pjpg&exif=1&iptc=1" id="home">
     <br></br>
