--- a/Home/amenities.html
+++ b/Home/amenities.html
@@ -84,7 +84,7 @@
       <h3>The Lounge</h3>
       <div class="flex unflex">
         <img class="content img" width="400" height="225" src="../images/lounge.jpg">
-        <div class="para content">
+        <div class="para content blue">
           <p>The hotel lounge is a versatile and inviting space that caters to both relaxation and productivity. With its comfortable seating, warm ambiance, and free Wi-Fi, it becomes a perfect spot for guests to hang around and work. The soothing atmosphere provides a conducive environment for focused tasks, while the well-equipped amenities ensure convenience. Whether freelancers, business travelers, or guests simply catching up on emails, the lounge fosters a seamless blend of work and leisure. The friendly staff and availability of refreshments further enhance the experience, making the hotel lounge a preferred destination for those seeking a productive yet cozy space to stay connected and get things done.</p>
           <br>
           <p>Location: Level 10 #10-35</p>
@@ -92,7 +92,7 @@
         <img class="content img" width="400" height="266.7" src="../images/guy.jpg">
       </div>
     </div>
-    <div class="unpara content">
+    <div class="unpara content blue">
       <p>The hotel lounge is a versatile and inviting space that caters to both relaxation and productivity. With its comfortable seating, warm ambiance, and free Wi-Fi, it becomes a perfect spot for guests to hang around and work. The soothing atmosphere provides a conducive environment for focused tasks, while the well-equipped amenities ensure convenience. Whether freelancers, business travelers, or guests simply catching up on emails, the lounge fosters a seamless blend of work and leisure. The friendly staff and availability of refreshments further enhance the experience, making the hotel lounge a preferred destination for those seeking a productive yet cozy space to stay connected and get things done.</p>
       <br>
       <p>Location: Level 10 #10-35</p>
