--- a/Home/mbooking.html
+++ b/Home/mbooking.html
@@ -39,7 +39,7 @@
 
   
   <section class="grid-container">
-    <img src="../images/ManageBooking.jpg" alt="hotel background">
+    <img class="pic" src="../images/Managebooking.jpeg" alt="hotel background">
      <div class="container">
        <h1 class="description">Manage Booking</h1>
        <form id="booking-form" action="#" method="POST">
