Updated button for sign up

--- a/Home/member.html
+++ b/Home/member.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class="hero-text-container">
-      <a href="signup.html" class="hero-book-now-button">SIGN UP FOR FREE NOW</a>
+      <p><a href="signup.html" class="btn btn-primary btn-outline-primary btn-sm">SIGN UP FOR FREE NOW</a></p>
     </div>
     
 <section class="grid-container">
