--- a/Home/amenities.html
+++ b/Home/amenities.html
@@ -22,7 +22,7 @@
     </div>
   </div>
   <header>
-    <nav>
+    <nav id="menu">
       <img src="../images/logo.png" alt="Continental Hotel logo">
       <ul>
         <li><a href="home.html">HOME</a></li>
