Addded JS for SIgn up page

--- a/All pages/signup.html
+++ b/All pages/signup.html
@@ -40,7 +40,7 @@
   <img class="pic" src="../images/signup.jpg" alt="hotel background">
    <div class="container">
      <h1 class="description">Continental Membership Sign Up</h1>
-     <form id="signup-form" action="#" method="POST">
+     <form id="signup-form" action="#">
        <label for="fullname">Full Name:</label>
        <input type="text" id="fullname" name="fullname" required>
        
@@ -60,10 +60,11 @@
 
       <h4 class="linktosignin">Already a member? <a href="signin.html">Sign in Here</a></h4>
 
-       <button class="submit" type="submit">Sign Up</button>
+       <button class="submit" type="submit" ">Sign Up</button>
      </form>
    </div>
   </section>
+  <script src="signup.js"></script>
 
   <footer class="site-footer">
     <div class="container">
