Change footer for all pages

--- a/All pages/mbooking.html
+++ b/All pages/mbooking.html
@@ -3,13 +3,11 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="css/bootstrap.css">
+   <link rel="stylesheet" href="global.css">
    <link rel="stylesheet" type="text/css" href="mbooking.css">
-   <link rel="stylesheet" href="fonts/ionicons/css/ionicons.min.css">
-  <link rel="stylesheet" href="fonts/fontawesome/css/font-awesome.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Antic+Didone&family=Crete+Round:ital@1&family=Libre+Baskerville:wght@700&family=Lora:ital@1&family=Merriweather:ital@1&family=Prata&family=Quicksand:wght@500&family=Raleway:wght@600&family=Ranga&family=Tsukimi+Rounded:wght@500&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Antic+Didone&family=Crete+Round:ital@1&family=Libre+Baskerville:wght@700&family=Lora:ital@1&family=Merriweather:ital@1&family=Prata&family=Quicksand:wght@500&family=Raleway:wght@600&family=Ranga&family=Tsukimi+Rounded:wght@500&display=swap" rel="stylesheet">
    <title>Manage Booking</title>
 </head>
 <body>
@@ -59,43 +57,34 @@
     </section>
   
 
-  <footer class="site-footer">
-    <div class="container">
-      <div class="row mb-5">
-        <div class="col-md-4">
-          <h3>Phone Support</h3>
-          <p>24/7 Call us now.</p>
-          <p class="lead"><a href="tel://">+ 1 332 3093 323</a></p>
-        </div>
-        <div class="col-md-4">
-          <h3>Connect With Us</h3>
-          <p>We are socialized. Follow us</p>
-          <p>
-            <a href="#" class="pl-0 p-3"><span class="fa fa-facebook"></span></a>
-            <a href="#" class="p-3"><span class="fa fa-twitter"></span></a>
-            <a href="#" class="p-3"><span class="fa fa-instagram"></span></a>
-            <a href="#" class="p-3"><span class="fa fa-vimeo"></span></a>
-            <a href="#" class="p-3"><span class="fa fa-youtube-play"></span></a>
-          </p>
-        </div>
-        <div class="col-md-4">
-          <h3>Connect With Us</h3>
-          <p>Join our mailing list for exclusive notifications on events and promotions.</p>
-          <form action="#" class="subscribe">
-            <div class="form-group">
-              <button type="submit"><span class="ion-ios-arrow-thin-right"></span></button>
-              <input type="email" class="form-control" placeholder="Enter email">
+    <footer class="footer-light-2">
+      <div class="container-4">
+        <div class="footer-wrapper-two-2">
+          <div class="footer-block-two-2">
+            <div class="footer-title-2">PHONE SUPPORT</div>
+            <div class="text-block">24/7 Call Us Now</div>
+            <div class="text-block-2">+65 6666 8888</div>
+          </div>
+          <div class="footer-block-two-2">
+            <div class="footer-title-2">Connect with us</div>
+            <div class="footer-social-block-two-2">
+              <a href="#" class="footer-social-link-2 w-inline-block"><img src="https://uploads-ssl.webflow.com/62434fa732124a0fb112aab4/62434fa732124ac76f12aaec_product%20icon-2.svg" loading="lazy" alt=""></a>
+              <a href="#" class="footer-social-link-2 w-inline-block"><img src="https://uploads-ssl.webflow.com/62434fa732124a0fb112aab4/62434fa732124a4a9512aae0_product%20icon-1.svg" loading="lazy" alt=""></a>
+              <a href="#" class="footer-social-link-2 w-inline-block"><img src="https://uploads-ssl.webflow.com/62434fa732124a0fb112aab4/62434fa732124a853712aad7_product%20icon.svg" loading="lazy" alt=""></a>
             </div>
-            
-          </form>
+          </div>
+          <div class="footer-form-2 footer-form">
+            <form id="wf-form-Footer-Form" name="wf-form-Footer-Form" data-name="Footer Form" method="get" class="footer-form-container-2">
+              <div class="footer-title-2">SUBSCRIBE</div>
+              <div class="footer-form-block-2"><input type="email" class="footer-form-field-2 footer-input" maxlength="256" name="Footer-Email" data-name="Footer Email" aria-label="Get product updates" placeholder="Enter your email" id="Footer-Email" required=""><input type="submit" value="" data-wait="Please wait..." class="footer-form-submit-2 footer-button"></div>
+            </form>
+          </div>
+        </div>
+        <div class="footer-divider-two-2"></div>
+        <div class="footer-bottom-2">
+          <div class="footer-copyright-2">© 2023 Continental Hotel. All rights reserved</div>
         </div>
       </div>
-      <div class="row justify-content-center">
-        <div class="col-md-7 text-center">
-          &copy;<script>document.write(new Date().getFullYear());</script> Continental Hotel. All rights reserved
-        </div>
-      </div>
-    </div>
-  </footer>
+    </footer>
 </body>
 </html>
