--- a/All pages/booking.html
+++ b/All pages/booking.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>The Continental - Booking Page</title>
-    <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" type="text/css" href="booking.css">
+    <link rel="stylesheet" href="global.css">
     <script src="booking.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,7 +40,7 @@
     </nav>
   </header>
   <div class="gold">
-    <form>
+    <form class="booking-form">
       <div class="group">
         <div class="form calendar">
           <label class="name">Check-in Date</label>
