--- a/All pages/rooms.html
+++ b/All pages/rooms.html
@@ -42,7 +42,7 @@
       <div class="room1-text">
         <h2>Classic Chamber</h2>
         <b><h2>Step into the Classic Chamber, where simplicity meets comfort. This cozy retreat provides a serene ambiance for your stay. The room features a plush queen-sized bed with soft, high-quality linens to ensure a peaceful night's sleep. Adorned with tasteful decor and warm lighting, the Classic Chamber offers a calming atmosphere to unwind after a long day.</h2></b>
-        <a href="../Home/booking.html" class="booknowbuttondes">BOOK NOW</a>
+        <a href="booking.html" class="booknowbuttondes">BOOK NOW</a>
       </div>
   
       <div class="room2-image">
@@ -51,7 +51,7 @@
       <div class="room2-text">
         <h2>Executive Suite</h2>
         <h2>Elevate your experience to the Executive Suite, a haven of sophistication and contemporary elegance. Upon entering, you'll be greeted by a spacious living area, tastefully furnished for relaxation or business needs. The separate bedroom boasts a king-sized bed dressed in luxurious linens, promising a truly indulgent rest.The Executive Suite caters to your every need, offering a seamless blend of comfort and sophistication.</h2>
-        <a href="../Home/booking.html" class="booknowbuttondes">BOOK NOW</a>
+        <a href="booking.html" class="booknowbuttondes">BOOK NOW</a>
       </div>
   
       <div class="room3-image">
@@ -60,7 +60,7 @@
       <div class="room3-text">
         <h2>Opulent Manor</h2>
         <h2>Prepare to be captivated by the grandeur of the Opulent Manor, a luxurious sanctuary fit for royalty. Upon stepping into this spacious suite, you'll be greeted by a lavish living area adorned with opulent furnishings, ornate accents, and beautiful artwork that exudes sophistication.The Opulent Manor offers an extraordinary level of luxury and comfort for a truly indulgent stay.</h2>
-        <a href="../Home/booking.html" class="booknowbuttondes">BOOK NOW</a>
+        <a href="booking.html" class="booknowbuttondes">BOOK NOW</a>
       </div>
 
       <div class="room4-image">
@@ -69,7 +69,7 @@
       <div class="room4-text">
         <h2>Ultimate Oasis</h2>
         <h2>Prepare to be transported to a realm of unparalleled luxury in the Ultimate Oasis, the pinnacle of opulence and refinement. This expansive suite epitomizes elegance and sophistication, starting with the grand foyer that leads you into a palatial living space, complete with plush seating and exquisite decorations. </h2>
-        <a href="../Home/booking.html" class="booknowbuttondes">BOOK NOW</a>
+        <a href="booking.html" class="booknowbuttondes">BOOK NOW</a>
       </div>
 </section>
 
